# serplex_macos

./: .gitignore  Build-Serplex-Tauri.ps1  GITHUB_MACOS_BUILD.md  app-version.json  package-lock.json  package.json  serplex.desktop.json
.github/workflows/: serplex-macos.yml
codex_local/: codex_lite_server.py  update_public_key.json
codex_local/web/: app.js  dashboard.css  dashboard.html  dashboard.js  index.html  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
tauri-ui/: loading.html
